# xslot-guard

./: Anchor.toml  COMMIT_GUIDE.md  Cargo.toml  DEPLOY.md  LICENSE  README.md  package.json
.github/workflows/: ci.yml
crates/xslot-cli/: Cargo.toml
crates/xslot-cli/src/: cu.rs  helius.rs  main.rs  replay.rs  types.rs
crates/xslot-core/: Cargo.toml
crates/xslot-core/src/: error.rs  guard.rs  lib.rs  oracle.rs  price.rs
docs/: architecture.md
programs/xslot-guard/: Cargo.toml
programs/xslot-guard/src/: lib.rs
tests/: sample_labelled_swaps.json  xslot-guard.ts
