[workspace]
resolver = "2"
members = [
    "crates/xslot-core",
    "crates/xslot-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Saba Shahzadi <sabijuraa3@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/sabijuraa/xslot-guard"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
