[package]
name = "xslot-guard"
version = "0.1.0"
edition = "2021"
description = "On-chain cross-slot sandwich MEV guard for Solana. Anchor program exposing a CPI-callable price-deviation check backed by a slot-weighted TWAP oracle."
license = "Apache-2.0"
repository = "https://github.com/sabijuraa/xslot-guard"

[lib]
crate-type = ["cdylib", "lib"]
name = "xslot_guard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
xslot-core = { path = "../../crates/xslot-core", default-features = false }
